--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -493,6 +493,7 @@ releases:
       -
         controller:
           kind: DaemonSet
+          allowSnippetAnnotations: true
           image:
             registry: registry.k8s.io
             image: ingress-nginx/controller
@@ -511,7 +512,6 @@ releases:
             use-forwarded-headers: "true"
             compute-full-forwarded-for: "true"
             use-proxy-protocol: "false"
-            allow-snippet-annotations: "true"
           resources:
             requests:
               cpu: 10m
