--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -1134,6 +1134,8 @@ releases:
           env:
             - name: SYSTEM_NAMESPACE
               value: {{ .Values.namespace }}
+            - name: EXTERNAL_UI_URL
+              value: {{ printf "https://%s" .Values.unbindDomain }}
             - name: EXTERNAL_OAUTH2_URL
               value: {{ printf "https://%s/api/oauth2" .Values.unbindDomain }}
             - name: POSTGRES_HOST
