--- a/charts/unbind-operator/templates/crd/unbind.unbind.app_services.yaml
+++ b/charts/unbind-operator/templates/crd/unbind.unbind.app_services.yaml
@@ -27,7 +27,7 @@ spec:
     - jsonPath: .spec.projectRef
       name: Project
       type: string
-    - jsonPath: .spec.environmentId
+    - jsonPath: .spec.environmentRef
       name: Environment
       type: string
     - jsonPath: .spec.type
@@ -35,9 +35,6 @@ spec:
       type: string
     - jsonPath: .status.deploymentStatus
       name: Status
-      type: string
-    - jsonPath: .status.url
-      name: URL
       type: string
     name: v1
     schema:
@@ -80,6 +77,24 @@ spec:
                         description: DatabaseSpecVersion is a reference to the version
                           of the database spec
                         type: string
+                      s3BackupConfig:
+                        description: S3Config for backupps
+                        properties:
+                          bucket:
+                            type: string
+                          endpoint:
+                            type: string
+                          region:
+                            type: string
+                          secretName:
+                            description: secret name containing the credentials
+                            type: string
+                        required:
+                        - bucket
+                        - endpoint
+                        - region
+                        - secretName
+                        type: object
                       type:
                         description: Type of the database
                         type: string
@@ -143,12 +158,134 @@ spec:
                 - database
                 - image
                 type: object
+              deploymentRef:
+                description: DeploymentRef is a reference to the deployment this service
+                  is based on
+                type: string
               description:
                 description: Description of the service
                 type: string
               displayName:
                 description: DisplayName is a human-friendly name for the service
                 type: string
+              envVars:
+                description: Additional environment variables to attach
+                items:
+                  description: EnvVar represents an environment variable present in
+                    a Container.
+                  properties:
+                    name:
+                      description: Name of the environment variable. Must be a C_IDENTIFIER.
+                      type: string
+                    value:
+                      description: |-
+                        Variable references $(VAR_NAME) are expanded
+                        using the previously defined environment variables in the container and
+                        any service environment variables. If a variable cannot be resolved,
+                        the reference in the input string will be unchanged. Double $$ are reduced
+                        to a single $, which allows for escaping the $(VAR_NAME) syntax: i.e.
+                        "$$(VAR_NAME)" will produce the string literal "$(VAR_NAME)".
+                        Escaped references will never be expanded, regardless of whether the variable
+                        exists or not.
+                        Defaults to "".
+                      type: string
+                    valueFrom:
+                      description: Source for the environment variable's value. Cannot
+                        be used if value is not empty.
+                      properties:
+                        configMapKeyRef:
+                          description: Selects a key of a ConfigMap.
+                          properties:
+                            key:
+                              description: The key to select.
+                              type: string
+                            name:
+                              default: ""
+                              description: |-
+                                Name of the referent.
+                                This field is effectively required, but due to backwards compatibility is
+                                allowed to be empty. Instances of this type with an empty value here are
+                                almost certainly wrong.
+                                More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                              type: string
+                            optional:
+                              description: Specify whether the ConfigMap or its key
+                                must be defined
+                              type: boolean
+                          required:
+                          - key
+                          type: object
+                          x-kubernetes-map-type: atomic
+                        fieldRef:
+                          description: |-
+                            Selects a field of the pod: supports metadata.name, metadata.namespace, `metadata.labels['<KEY>']`, `metadata.annotations['<KEY>']`,
+                            spec.nodeName, spec.serviceAccountName, status.hostIP, status.podIP, status.podIPs.
+                          properties:
+                            apiVersion:
+                              description: Version of the schema the FieldPath is
+                                written in terms of, defaults to "v1".
+                              type: string
+                            fieldPath:
+                              description: Path of the field to select in the specified
+                                API version.
+                              type: string
+                          required:
+                          - fieldPath
+                          type: object
+                          x-kubernetes-map-type: atomic
+                        resourceFieldRef:
+                          description: |-
+                            Selects a resource of the container: only resources limits and requests
+                            (limits.cpu, limits.memory, limits.ephemeral-storage, requests.cpu, requests.memory and requests.ephemeral-storage) are currently supported.
+                          properties:
+                            containerName:
+                              description: 'Container name: required for volumes,
+                                optional for env vars'
+                              type: string
+                            divisor:
+                              anyOf:
+                              - type: integer
+                              - type: string
+                              description: Specifies the output format of the exposed
+                                resources, defaults to "1"
+                              pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                              x-kubernetes-int-or-string: true
+                            resource:
+                              description: 'Required: resource to select'
+                              type: string
+                          required:
+                          - resource
+                          type: object
+                          x-kubernetes-map-type: atomic
+                        secretKeyRef:
+                          description: Selects a key of a secret in the pod's namespace
+                          properties:
+                            key:
+                              description: The key of the secret to select from.  Must
+                                be a valid secret key.
+                              type: string
+                            name:
+                              default: ""
+                              description: |-
+                                Name of the referent.
+                                This field is effectively required, but due to backwards compatibility is
+                                allowed to be empty. Instances of this type with an empty value here are
+                                almost certainly wrong.
+                                More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                              type: string
+                            optional:
+                              description: Specify whether the Secret or its key must
+                                be defined
+                              type: boolean
+                          required:
+                          - key
+                          type: object
+                          x-kubernetes-map-type: atomic
+                      type: object
+                  required:
+                  - name
+                  type: object
+                type: array
               environmentRef:
                 description: EnvironmentRef references the environment this service
                   belongs to
@@ -163,6 +300,11 @@ spec:
                 description: GitHubInstallationID for GitHub integration
                 format: int64
                 type: integer
+              imagePullSecrets:
+                description: Registry secrets to pull images from
+                items:
+                  type: string
+                type: array
               kubernetesSecret:
                 description: KubernetesSecret name for this service
                 type: string
