Half redis size

--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -374,7 +374,7 @@ releases:
           replicaCount: 1
           persistence:
             enabled: true
-            size: 1Gi
+            size: 512Mi
           resources:
             requests:
               memory: "10Mi"
