--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -24,6 +24,11 @@ values:
  - tlsSecretName: unbind-domain-tls
  - registryTlsSecretName: unbind-registry-domain-tls
  - unbindVersion: v0.0.10
+ - externalRegistry:
+     enabled: false
+     host: docker.io
+     username: ""
+     password: ""
 
 environments:
   default:
@@ -439,6 +444,28 @@ releases:
             fi
             echo -e "${GREEN}✓ Namespace '$NAMESPACE' exists${NC}"
 
+            # Modified part of registry presync hook
+            if [ "$EXTERNAL_REGISTRY_ENABLED" = "true" ]; then
+              echo "Using external registry. Creating registry credentials..."
+              
+              # Get external registry credentials
+              REGISTRY_HOST="{{ .Values | get "externalRegistry.host" "docker.io" }}"
+              REGISTRY_USERNAME="{{ .Values | get "externalRegistry.username" "" }}"
+              REGISTRY_PASSWORD="{{ .Values | get "externalRegistry.password" "" }}"
+              
+              # Create registry credentials for external registry
+              kubectl create secret generic registry-credentials \
+                --namespace="$NAMESPACE" \
+                --from-literal=username="${REGISTRY_USERNAME}" \
+                --from-literal=password="${REGISTRY_PASSWORD}" \
+                --dry-run=client -o yaml | kubectl apply -f -
+              
+              echo "Registry credentials created for external registry: $REGISTRY_HOST"
+              exit 0
+            fi
+
+            # Continue with internal registry setup if external registry is not enabled
+
             echo "Checking for existing secret 'registry-basic-auth' in namespace '$NAMESPACE'..."
             if ! kubectl get secret registry-basic-auth -n "$NAMESPACE" &> /dev/null; then
               echo "Creating basic auth secret for Docker Registry..."
@@ -480,9 +507,10 @@ releases:
         cleanup:
           threshold: {{ .Values | get "overrides.registry.cleanup.threshold" }}
 
+    # Update the labels in registry component
     labels:
       component: registry
-      installed: {{ .Values | get "components.registry.enabled" true }}
+      installed: {{ and (.Values | get "components.registry.enabled" true) (not (.Values | get "externalRegistry.enabled" false)) }}
 
   - name: ingress-nginx
     namespace: {{ .Values.namespace }}
@@ -1081,7 +1109,7 @@ releases:
             - name: BUILDER_NAMESPACE
               value: {{ .Values.namespace }}
             - name: BOOTSTRAP_CONTAINER_REGISTRY_HOST
-              value: {{ .Values | get "overrides.unbind.api.registry.host" .Values.unbindRegistryDomain }}
+              value: {{ if .Values | get "externalRegistry.enabled" false }}{{ .Values | get "externalRegistry.host" "docker.io" }}{{ else }}{{ .Values | get "overrides.unbind.api.registry.host" .Values.unbindRegistryDomain }}{{ end }}
             - name: BOOTSTRAP_CONTAINER_REGISTRY_USER
               valueFrom:
                 secretKeyRef:
